Clarify ose-kube-rbac-proxy-rhel9 pull spec details

--- a/modules/osdk-updating-131-to-1361.adoc
+++ b/modules/osdk-updating-131-to-1361.adoc
@@ -52,14 +52,18 @@ The following procedure updates an existing {type}-based Operator project for co
 OPERATOR_SDK_VERSION ?= v{osdk_ver}-ocp
 ----
 
-. Find the `ose-kube-rbac-proxy` pull spec in the following files, and update the image tag to `v{product-version}`:
+. Update the `kube-rbac-proxy` container to use the {op-system-base-full} 9-based image:
+
+.. Find the entry for the `kube-rbac-proxy` container in the following files:
 +
 --
 * `config/default/manager_auth_proxy_patch.yaml`
-* `bundle/manifests/memcached-operator.clusterserviceversion.yaml`
+* `bundle/manifests/<operator_name>.clusterserviceversion.yaml` for your Operator project, for example `memcached-operator.clusterserviceversion.yaml` from the tutorials
 --
+
+.. Update the image name in the pull spec from `ose-kube-rbac-proxy` to `ose-kube-rbac-proxy-rhel9`, and update the tag to `v{product-version}`:
 +
-.Example `ose-kube-rbac-proxy` pull spec with `v{product-version}` image tag
+.Example `ose-kube-rbac-proxy-rhel9` pull spec with `v{product-version}` image tag
 [source,yaml,subs="attributes+"]
 ----
 # ...
